# dungeon_explorer

./: .gitignore  CLAUDE.md  README.md  TODO.md  conf.py  exercises.rst  index.rst  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_deploy.yml
000_prototype/: game.py  requirements.txt
chapters/: cleanup.rst  coins.rst  effects.rst  executable.rst  explosions.rst  fireballs.rst  fireballs_hurt.rst  floor.rst  healing_potion.rst  health.rst  installation.rst  keys.rst  lesson_plans.rst  levels.rst  links.rst  lookup_table.rst  more_monsters.rst  music.rst  prototype.rst  push_boxes.rst  save_load.rst  secret_door.rst  skeletons.rst  smooth.rst  split_function.rst  stairs.rst  switch.rst  teleporters.rst  title_screen.rst  traps.rst  unlock_doors.rst  video.rst  walls.rst
chapters/design_patterns/: README.rst  more.rst  observer.rst
chapters/recap/: README.rst  items.rst  level_gen1.rst  pixels.rst  random_level.rst
prototype/: create_key_icons.py  game.py  main.py  requirements.txt
solution/001_floor/: game.py  main.py
solution/002_walls/: game.py  main.py
solution/003_stairs/: game.py  main.py
solution/004_coins/: game.py  main.py
solution/005_health_bar/: game.py  main.py
solution/006_traps/: main.py
solution/007_symbols/: game.py  main.py
solution/008_pickup_keys/: game.py  main.py
solution/009_open_doors/: game.py  main.py
solution/010_teleporters/: game.py  main.py
solution/012_extract_function/: game.py
solution/013_fireballs/: game.py
solution/014_fireballs_hurt/: game.py  main.py
solution/016_levels/: game.py  (+1 more)
(+21 files in other folders)
